--- a/index.html
+++ b/index.html
@@ -22,6 +22,42 @@
         <img class="lead__image" src="./images/lead-polka.jpg" alt="в вагоне">
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
+      <section class="intro">
+        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <p class="intro__text">
+          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
+          но только 36% планируют провести отпуск в родной стране. 
+          Мол, чего мы тут, дома, не видели? 
+          На самом деле, Россия — это целая вселенная с ласковым морем юга, 
+          густыми лесами Саян и суровыми льдами плато Путорана. 
+          А ещё увидеть все эти красоты можно без миллионов на счету, 
+          загранпаспорта и многочасовых перелетов. Как, например, 
+          Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, 
+          усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. 
+          Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
+        </p>
+        <ul class="intro__list">
+          <li>Часовых поясов <span class="intro__values">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="intro__values">12</span></li>
+          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__values">16</span></li>
+          <li>Природных заповедников <span class="intro__values">105</span></li>
+          <li>Аэропортов <span class="intro__values">241</span></li>
+        </ul>
+      </section>
+      <section class="photo-grid">
+        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="вид из окна поезда">
+        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Виршины гор">
+        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман">
+        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
+        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Колесо на льду">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Байкал">
+        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
+        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал-2">
+        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
+      </section>
     </main>
 
     
