--- a/index.html
+++ b/index.html
@@ -159,7 +159,25 @@
           </div>
         </article>
       </section>
+      <section class="cover">
+        <a class="cover__overlay" target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <div class="cover__background">
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        </div>
+        </a>
+      </section>
     </main>
+    <footer class="footer">
+      <ul class="footer__links">
+        <li><a class="footer__link" target="_blank" href="https://yandex.ru/maps">Карты</a></li>
+        <li><a class="footer__link" target="_blank" href="https://yandex.ru/pogoda">Погода</a></li>
+        <li><a class="footer__link" target="_blank" href="https://rasp.yandex.ru">Расписание</a></li>
+        <li><a class="footer__link" target="_blank" href="https://calendar.yandex.ru">Календарь</a></li>
+        <li><a class="footer__link" target="_blank" href="https://travel.yandex.ru">Путешествия</a></li>
+      </ul>
+      <p class="footer__author">&copy; Евгений Тарасов</p>
+    </footer>
 
     
 
