--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>Путешествия по России</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
+<body class="body">
   <div class="page">
     <header class="header">
       <div class="header__logo"></div>
       <ul class="header__lang-links">
-        <li><a class="header__lang-link header__lang-link_active" href="/" lang="en">Ru</a></li>
-        <li><a class="header__lang-link" href="/" lang="en">En</a></li>
+        <li><a class="header__lang-link header__lang-link_active" href="#" lang="en">Ru</a></li>
+        <li><a class="header__lang-link" href="#" lang="en">En</a></li>
       </ul>
     </header>
     <main class="content">
