--- a/index.html
+++ b/index.html
@@ -159,22 +159,23 @@
           </div>
         </article>
       </section>
-      <section>
-        <a class="cover" target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-          <div class="cover__overlay"></div>
+      <section class="cover">
+        <a class="cover__background-overlay" target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala">
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </a>
       </section>
     </main>
     <footer class="footer">
-      <ul class="footer__links">
-        <li><a class="footer__link" target="_blank" href="https://yandex.ru/maps">Карты</a></li>
-        <li><a class="footer__link" target="_blank" href="https://yandex.ru/pogoda">Погода</a></li>
-        <li><a class="footer__link" target="_blank" href="https://rasp.yandex.ru">Расписание</a></li>
-        <li><a class="footer__link" target="_blank" href="https://calendar.yandex.ru">Календарь</a></li>
-        <li><a class="footer__link" target="_blank" href="https://travel.yandex.ru">Путешествия</a></li>
-      </ul>
+      <nav>
+        <ul class="footer__links">
+          <li><a class="footer__link" target="_blank" href="https://yandex.ru/maps">Карты</a></li>
+          <li><a class="footer__link" target="_blank" href="https://yandex.ru/pogoda">Погода</a></li>
+          <li><a class="footer__link" target="_blank" href="https://rasp.yandex.ru">Расписание</a></li>
+          <li><a class="footer__link" target="_blank" href="https://calendar.yandex.ru">Календарь</a></li>
+          <li><a class="footer__link" target="_blank" href="https://travel.yandex.ru">Путешествия</a></li>
+        </ul>
+      </nav>
       <p class="footer__author">&copy; 2022. Евгений Тарасов</p>
     </footer>
   </div>
